#82 Fix overlapping icons & search input with mobile screens

--- a/public/modules/search/less/search.less
+++ b/public/modules/search/less/search.less
@@ -25,8 +25,8 @@
     right: 50%;
     margin-right: -150px;
     @media (max-width: @screen-xs-max) {
-      width: 250px;
-      margin-right: -125px;
+      top: auto;
+      bottom: @padding-base-horizontal;
     }
     .input-group {
       box-shadow: 0 1px 5px rgba(0,0,0,0.35);
